--- a/templates/index.html
+++ b/templates/index.html
@@ -14,7 +14,7 @@
                 <!-- Card Slide 1 -->
                 <div class="carousel-item active">
                     <div class="hero-card">
-                        <h1 class="display-4">Soluciones en Asfalto</h1>
+                        <h1 class="display-4">Soluciones en Construcción</h1>
                         <p class="lead">Construcción, pavimentación y mantenimiento con calidad garantizada.</p>
                         <a href="{{ url_for('services') }}" class="btn btn-primary btn-lg">Nuestros Servicios</a>
                     </div>
