--- a/templates/base.html
+++ b/templates/base.html
@@ -16,7 +16,7 @@
 <body>
     <!-- Header -->
     <header class="sticky-top">
-        <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: var(--dark-bg);">
+        <nav class="navbar navbar-expand-lg navbar-dark">
             <div class="container">
                 <a class="navbar-brand" href="{{ url_for('index') }}">
                     <img src="{{ settings.logo_url if settings and settings.logo_url else url_for('static', filename='images/logo.png') }}" alt="Logo" class="navbar-logo">
