feat: Aumenta el tamaño del logo y añade favicon
- Se incrementa la altura del logo en la barra de navegación a 150px para mayor visibilidad.

- Se añade el archivo fivicon.png y se configura en base.html como el nuevo favicon del sitio.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -65,7 +65,7 @@ header .navbar {
 }
 
 .navbar-logo {
-    height: 120px; /* Logo más pequeño */
+    height: 150px; /* Logo más grande */
     width: auto;
     vertical-align: middle;
 }
