--- a/templates/base.html
+++ b/templates/base.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{ settings.site_name if settings else "Constructora Asolca, SRL" }}</title>
-    <link rel="icon" href="{{ url_for('static', filename='images/favicon2.png') }}" type="image/png">
+    <link rel="icon" href="{{ url_for('static', filename='images/fivicon2.png') }}" type="image/png">
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
